--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -71,12 +71,12 @@
 Во-первых, вместе с сообщением контролируется целостность и подлинность 
 ассоциированных открытых данных, которые не зашифровываются.
 %
-Части сообщения и ассоциированных данных могут чередоваться.
+Во-вторых, части сообщения и ассоциированных данных могут чередоваться.
 %
-Во-вторых, имитовставки могут выдаваться несколько раз по мере обработки 
+В-третьих, имитовставки могут выдаваться несколько раз по мере обработки 
 частей.
 %
-В-третьих, в процессе обработки данных могут обновляться ключи. 
+В-четвертых, в процессе обработки данных могут обновляться ключи. 
 
 \begin{note}
 Примечание~---~Схожие по назначению алгоритмы установлены в СТБ~34.101.31. 
@@ -212,8 +212,8 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 \section{Имитовставка}\label{COMMON.MAC}
 
 С помощью программируемых алгоритмов можно вычислять имитовставки.
-В их качестве выступают выгружаемые данные автомата программируемого алгоритма 
-при условии, что автомат переведен в ключевой режим.
+Это данные, выгружаемые из автомата программируемого алгоритма,
+причем автомат переведен в ключевой режим.
 
 В алгоритмах аутентифицированного шифрования длина имитовставки 
 совпадает с уровнем стойкости~$l$. 
@@ -237,11 +237,11 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 С помощью анонса можно уточнить контекст использования программируемого 
 алгоритма~--- сузить назначение, локализовать, задать настройки.
 %
+Например один анонс может описывать исходящий трафик сети~A, 
+второй~--- внутренний трафик сети~B.
+%
 Алгоритмы разных контекстов, то есть с разными анонсами, 
 по-разному обрабатывают одни и те же данные. 
-%
-Один анонс может описывать исходящий трафик сети~A, 
-второй~--- внутренний трафик сети~B.
 
 Анонс представляет собой двоичное слово, длина которого кратна~$32$ и не 
 превосходит~$480$. Допускаются пустые анонсы.
@@ -252,7 +252,7 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 \section{Синхропосылка}\label{COMMON.Nonce}
 
 В алгоритмах аутентифицированного шифрования анонс может содержать 
-синхропосылку или являться синхропосылкой.
+синхропосылку.
 
 Синхропосылки, которые используются с одним и тем же ключом для шифрования 
 различных сообщений, должны быть уникальны: на уровне~$l$ они могут повторяться 
