renumbering files + update travis key

--- a/spec/_body.tex
+++ b/spec/_body.tex
@@ -19,8 +19,7 @@
 \input{07Hash}
 \input{080Prg}
 
-\input{920Test}
-\input{93ASN}
-
-\input{biblio}
+\input{910Test}
+\input{92ASN}
+\input{93Biblio}
 
