spec/prg/ae -= typos

--- a/spec/093AE.tex
+++ b/spec/093AE.tex
@@ -84,7 +84,7 @@ $T\leftarrow \alpha.\algname{squeeze}(l)$;
 
 \subsection{Алгоритм снятия защиты}\label{PRG.AE.Unwrap}
 
-Снятие защиты $\algname{bash-prg-ae}[l,d]^{-1}(A,Y,I,T,K)$ выполняется 
+Снятие защиты $\algname{bash-prg-ae}^{-1}[l,d](A,Y,I,T,K)$ выполняется 
 следующим образом:
 \begin{enumerate}
 \item
