--- a/spec/07Hash.tex
+++ b/spec/07Hash.tex
@@ -3,7 +3,7 @@
 \section{Интерфейс}\label{HASH.IFace}
 
 Хэширование задается алгоритмом $\algname{bash-hash}$.
-Папаметром алгоритма является уровень стойкости~$l\in\{16,32,\ldots,256\}$ 
+Параметром алгоритма является уровень стойкости~$l\in\{16,32,\ldots,256\}$ 
 (см.~\ref{COMMON.Strength}).
 
 Входными данными $\algname{bash-hash}[l]$ является хэшируемое 
