--- a/spec/086Absorb.tex
+++ b/spec/086Absorb.tex
@@ -6,7 +6,7 @@
 
 Выходные данные отсутствуют.
 
-Используются алгоритм~$\algname{bash-f}$, определенный в~\ref{F}.
+Используется алгоритм~$\algname{bash-f}$, определенный в~\ref{F}.
 
 \subsection{Алгоритм}\label{PRG.Absorb.Alg}
 
