fix typo in Table A.6

--- a/spec/916TestPrgAE.tex
+++ b/spec/916TestPrgAE.tex
@@ -11,7 +11,7 @@ $A$ &
  $\hex{B194BAC80A08F53B~366D008E584A5DE4}$\\
 \hline
 $K$ &
-$\hexz{5BE3D61217B96181~FE6786AD716B890B~5CB0C0FF33C356B8~35C405AED8E07F99}$\\
+ $\hex{5BE3D61217B96181~FE6786AD716B890B~5CB0C0FF33C356B8~35C405AED8E07F99}$\\
 \hline
 \hline
 $X$ & $0^{1536}$\\
