fix typos in Terms

--- a/spec/03Terms.tex
+++ b/spec/03Terms.tex
@@ -4,7 +4,7 @@
 следующие термины с соответствующими определениями:
 
 {\bf \thedefctr~автомат (криптографический)}:
-логическое устройство, способное находиться в одном из нескольких 
+Логическое устройство, способное находиться в одном из нескольких 
 состояний, осуществлять хэширование, шифрование, имитозащиту и другие 
 криптографические преобразования данных с помощью команд, изменяющих 
 состояние.
@@ -36,7 +36,7 @@
 и имитозащиты и который известен только определенным сторонам.
 
 {\bf \thedefctr~команда}:
-алгоритм, который связан с автоматом, принимая 
+Алгоритм, который связан с автоматом, принимая 
 в качестве дополнительного входа его текущее состояние
 и возвращая дополнительно обновленное состояние.
 
