editorial + fix testPrg3

--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -316,20 +316,20 @@ $\algname{bash-hash}[l]$.
 Речь идет, в том числе, о переменных алгоритма хэширования, 
 который может использоваться для обработки критических данных.
 
-При реализации алгоритма объявленные переменные должны очищаться после 
-использования.
+При реализации алгоритма объявленные переменные \addendum{следует} очищать после
+использования. 
 %
 Очистке подлежит, в том числе автомат (точнее, его состояние), 
 задействованный в программируемом алгоритме.
-
-Реализации могут не буквально следовать описанию алгоритма.
-Например, переменная алгоритма может быть представлена несколькими 
-переменными реализации. При организации очистки необходимо учитывать 
-особенности реализации.
+%
+\addendum{При организации очистки необходимо учитывать особенности
+реализации, например, ситуации, когда} переменная алгоритма представляется
+несколькими переменными реализации.
 
 Очистка переменных алгоритма может не выполняться, если алгоритм все-таки 
 не обрабатывает и не возвращает критические данные.
 %
 Переменные могут также не очищаться, если алгоритм выполняется в защищенной 
 среде, и доступ к переменным блокируется аппаратными или другими способами.
+
 
