--- a/spec/03Terms.tex
+++ b/spec/03Terms.tex
@@ -4,7 +4,7 @@
 следующие термины с соответствующими определениями:
 
 {\bf \thedefctr~автомат (криптографический)}:
-Логическое устройство, способное находиться в одном из нескольких 
+\addendum{Л}огическое устройство, способное находиться в одном из нескольких 
 состояний, осуществлять хэширование, шифрование, имитозащиту и другие 
 криптографические преобразования данных с помощью команд, изменяющих 
 состояние.
@@ -20,7 +20,7 @@
 {\bf \thedefctr~зашифрование}:
 Преобразование сообщения,
 направленное на обеспечение его конфиденциальности,
-которое определяется с использованием ключа.
+которое \addendum{выполняется} с использованием ключа.
 
 {\bf \thedefctr~имитовставка}:
 Двоичное слово, 
@@ -36,7 +36,7 @@
 и имитозащиты и который известен только определенным сторонам.
 
 {\bf \thedefctr~команда}:
-Алгоритм, который связан с автоматом, принимая 
+\addendum{А}лгоритм, который связан с автоматом, принимая 
 в качестве дополнительного входа его текущее состояние
 и возвращая дополнительно обновленное состояние.
 
