update after review

--- a/spec/03Terms.tex
+++ b/spec/03Terms.tex
@@ -6,7 +6,7 @@
 {\bf \thedefctr~автомат (криптографический)}:
 \addendum{Л}огическое устройство, способное находиться в одном из нескольких 
 состояний, осуществлять хэширование, шифрование, имитозащиту и другие 
-криптографические преобразования данных с помощью команд, изменяющих 
+криптографические преобразова\addendum{ния с} помощью команд, изменяющих 
 состояние.
 
 {\bf \thedefctr~анонс}:
@@ -49,7 +49,7 @@
 
 {\bf \thedefctr~подлинность}:
 Гарантия того, что сторона действительно является
-владельцем (создателем, отправителем) определенного сообщения.
+\addendum{владельцем, создателем или  отправителем} определенного сообщения.
 
 {\bf \thedefctr~псевдослучайные числа}: 
 Последовательность элементов, полученная в результате выполнения некоторого
