--- a/spec/04Defs.tex
+++ b/spec/04Defs.tex
@@ -28,7 +28,8 @@ $\{0,1\}^{n*}$  &&
 \\[4pt]
 %
 $\alpha^n$  &&
-для $\alpha\in\{0,1\}$ слово из $n$ экземпляров $\alpha$;
+для $\alpha\in\{0,1\}$ слово из $n$ экземпляров $\alpha$
+\addendum{($\alpha^0=\perp$)};
 \\[4pt]
 %
 $u[i]$ &&
@@ -171,7 +172,8 @@ w=
 0000 0001 0010 0011 0100 0101 0110 0111
 1000 1001 1010 1011 1100 1101 1110 1111.
 $$
-В этом слове первые семь битов нулевые, затем~--- $1$, затем~--- два~$0$ и так далее.
+В этом слове первые семь битов нулевые, затем~--- $1$, затем~--- два~$0$ и 
+\addendum{т.~д.}
 
 Двоичное слово разбивается на тетрады из четверок последовательных битов.
 %
@@ -182,7 +184,10 @@ $$
 \caption{}\label{Table.Hex}
 \begin{tabular}{|c|c||c|c||c|c||c|c|}
 \hline
-тетрада & символ & тетрада & символ & тетрада & символ & тетрада & символ\\
+\addendum{Тетрада} & \addendum{Символ} & 
+\addendum{Тетрада} & \addendum{Символ} & 
+\addendum{Тетрада} & \addendum{Символ} & 
+\addendum{Тетрада} & \addendum{Символ} \\
 \hline
 0000 & $\hex{0}$ & 0001 & $\hex{1}$ & 
 0010 & $\hex{2}$ & 0011 & $\hex{3}$\\
@@ -254,7 +259,7 @@ $$
 При отождествлении слов с числами удобно представить себе 
 гипотетический регистр, разрядность которого совпадает с длиной слова.
 В самый правый октет регистра загружается первый октет слова, 
-во второй справа октет регистра~--- второй октет слова и так далее,
+во второй справа октет регистра~--- второй октет слова и \addendum{т.~д.},
 пока, наконец, в самый левый октет регистра не загружается последний 
 октет слова.
 %
@@ -316,14 +321,14 @@ $$
 \section{Запись перечислений}\label{DEFS.Seqs}
 
 При записи последовательности~$u_1,u_2,\ldots,u_n$ 
-допускается, если не оговорено противное, выполнение неравенства $n<2$.
+допускается, если не оговорено \addendum{иное}, выполнение неравенства $n<2$.
 При $n=0$ идет речь о пустой последовательности, 
 а при $n=1$~--- об одноэлементной последовательности $u_1$.
 
 Аналогичные соглашения распространяются на запись конкатенации нескольких 
 слов, итератора цикла.
 %
-Например,
+Например\addendum{:}
 \begin{itemize}
 \item
 слово $u_1\parallel u_2\parallel\ldots\parallel u_n$ является пустым при $n=0$ 
