--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -10,9 +10,9 @@
 Криптографические алгоритмы делятся на две группы:
 \begin{enumerate}
 \item[1)]
-алгоритмы хэширования (\ref{HASH});
+алгоритмы хэширования (\addendum{см.}~\ref{HASH});
 \item[2)]
-программируемые алгоритмы (\ref{PRG}).
+программируемые алгоритмы (\addendum{см.}~\ref{PRG}).
 \end{enumerate}
 
 Алгоритм хэширования по сообщению произвольной длины строит 
@@ -38,9 +38,9 @@
 того же хэширования.
 %
 В настоящем стандарте объявляются 
-правила безопасного программирования (\ref{PRG.Rules}),
-явно определяются программируемые алгоритмы хэширования (\ref{PRG.Hash}) 
-и аутентифицированного шифрования (\ref{PRG.AE}).
+правила безопасного программирования (\addendum{см.}~\ref{PRG.Rules}),
+явно определяются программируемые алгоритмы хэширования (\addendum{см.}~\ref{PRG.Hash}) 
+и аутентифицированного шифрования (\addendum{см.}~\ref{PRG.AE}).
 
 Программируемые алгоритмы хэширования обладают большей гибкостью, чем базовые: 
 с их помощью можно вычислять хэш-значения произвольной длины,
@@ -202,9 +202,10 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 Ключ большей длины может быть избыточным кодом $l$-битового 
 ключа, например, дополнительно содержать контрольные биты.
 
-Сразу после загрузка ключа автомат программируемого алгоритма переходит в ключевой 
-режим. В этом режиме автомат может выполнять шифрование, аутентифицированное 
-шифрование, имитозащиту, генерировать секретные псевдослучайные числа.
+Сразу после \addendum{загрузки} ключа автомат программируемого алгоритма 
+переходит в ключевой режим. В этом режиме автомат может выполнять шифрование, 
+аутентифицированное шифрование, имитозащиту, генерировать секретные 
+псевдослучайные числа.
 
 Пока ключ не введен, автомат остается в бесключевом режиме. Здесь можно только 
 хэшировать данные. 
@@ -228,8 +229,8 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 Ключи и другие секретные объекты должны строиться по непересекающимся 
 фрагментам последовательностей псевдослучайных чисел.
 %
-Если генерируемый ключ использоваться для управления другим автоматом, то
-уровень стойкости целевого автомата не должен быть выше уровня стойкости
+Если генерируемый ключ \addendum{используется} для управления другим автоматом, 
+то уровень стойкости целевого автомата не должен быть выше уровня стойкости
 генерирующего.
 
 \section{Анонс}\label{COMMON.Anounce}
@@ -319,7 +320,7 @@ $\algname{bash-hash}[l]$.
 При реализации алгоритма объявленные переменные \addendum{следует} очищать после
 использования. 
 %
-Очистке подлежит, в том числе автомат (точнее, его состояние), 
+Очистке подлежи\addendum{т в} том числе автомат (точнее, его состояние),
 задействованный в программируемом алгоритме.
 %
 \addendum{При организации очистки необходимо учитывать особенности
