--- a/spec/093AE.tex
+++ b/spec/093AE.tex
@@ -95,7 +95,7 @@ $T\leftarrow \alpha.\algname{squeeze}(l)$;
 \item
 $\alpha.\algname{absorb}(I)$;
 \item
-$X\leftarrow\alpha.\algname{encrypt}(Y)$;
+$X\leftarrow\alpha.\addendum{\algname{decrypt}}(Y)$;
 \item
 если $T\neq\alpha.\algname{squeeze}(l)$, то возвратить~$\perp$;
 \item
