--- a/spec/03Terms.tex
+++ b/spec/03Terms.tex
@@ -5,8 +5,8 @@
 
 {\bf \thedefctr~автомат (криптографический)}:
 \addendum{Л}огическое устройство, способное находиться в одном из нескольких 
-состояний, осуществлять хэширование, шифрование, имитозащиту и другие 
-криптографические преобразова\addendum{ния с} помощью команд, изменяющих 
+состояний, \addendum{выполнять} хэширование, шифрование, имитозащиту и другие 
+криптографические \addendum{операции} с помощью команд, изменяющих 
 состояние.
 
 {\bf \thedefctr~анонс}:
