--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -28,8 +28,8 @@
 Алгоритмы хэширования могут дополнительно использоваться при построении 
 самих систем ЭЦП, генераторов случайных и псевдослучайных чисел, 
 протоколов аутентификации,
-криптографических контейнеров, 
-% криптографических контейнеров в стиле деревьев Меркля?
+криптографических \addendum{аккумуляторов}, 
+% криптографических аккумуляторов в стиле деревьев Меркля?
 доказательств вычислительной работы и др.
 
 Программируемые алгоритмы представляют собой последовательности команд 
@@ -42,11 +42,10 @@
 явно определяются программируемые алгоритмы хэширования (\addendum{см.}~\ref{PRG.Hash}) 
 и аутентифицированного шифрования (\addendum{см.}~\ref{PRG.AE}).
 
-Программируемые алгоритмы хэширования обладают большей гибкостью, чем базовые: 
-с их помощью можно вычислять хэш-значения произвольной длины,
+Программируемые алгоритмы хэширования обладают большей гибкостью, 
+чем базовые: с их помощью можно вычислять хэш-значения произвольной длины,
 а при определенной настройке можно повысить скорость хэширования 
 за счет уравнивания гарантий безопасности относительно различных атак.
-% без изменения минимального уровня гарантий?
 %
 Кроме этого, программируемый алгоритм дополнительно принимает на вход анонс,
 с помощью которого можно уточнить контекст хэширования.
@@ -81,7 +80,7 @@
 \begin{note}
 Примечание~---~Схожие по назначению алгоритмы установлены в СТБ~34.101.31. 
 Алгоритмы настоящего стандарта дают дополнительные функциональные возможности.
-Например алгоритмы хэширования поддерживают все три уровня стойкости 
+Наприме\addendum{р,} алгоритмы хэширования поддерживают все три уровня стойкости 
 алгоритмов ЭЦП, определенных в СТБ 34.101.45, в то время как алгоритм 
 хэширования СТБ 34.101.31 поддерживает только первый уровень.
 %
@@ -164,15 +163,6 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 Программируемый алгоритм хэширования вычисляет хэш-значения 
 произвольной заданной длины~$n$.
 
-При выборе~$(l,n)$ следует учитывать данные таблицы~\ref{Table.COMMON.Hash}.
-В таблице приводится трудоемкость атак по 
-обращению (найти сообщение с заданным хэш-значением),
-построению второго прообраза (найти другое сообщение с тем же хэш-значением)
-и построению коллизии (найти различные сообщения с одинаковыми хэш-значениями).
-%
-Величина~$u$ в таблице означает, что для достижения успеха в ходе атаки 
-потребуется выполнить порядка~$2^u$ операций.
-
 \begin{table}[hbt]
 \caption{Трудоемкость атак на алгоритмы хэширования}\label{Table.COMMON.Hash}
 \begin{tabular}{|c|c|c|c|}
@@ -188,6 +178,15 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 \hline
 \end{tabular}
 \end{table}
+
+При выборе~$(l,n)$ следует учитывать данные таблицы~\ref{Table.COMMON.Hash}.
+В таблице приводится трудоемкость атак по 
+обращению (найти сообщение с заданным хэш-значением),
+построению второго прообраза (найти другое сообщение с тем же хэш-значением)
+и построению коллизии (найти различные сообщения с одинаковыми хэш-значениями).
+%
+Величина~$u$ в таблице означает, что для достижения успеха в ходе атаки 
+потребуется выполнить порядка~$2^u$ операций.
 
 \section{Ключ}\label{COMMON.Key}
 
@@ -213,15 +212,16 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 \section{Имитовставка}\label{COMMON.MAC}
 
 С помощью программируемых алгоритмов можно вычислять имитовставки.
-Это данные, выгружаемые из автомата программируемого алгоритма,
-причем автомат переведен в ключевой режим.
+Это данные, \addendum{которые выдает} автомат программируемого 
+алгоритма, причем автомат переведен в ключевой режим.
 
 В алгоритмах аутентифицированного шифрования длина имитовставки 
 совпадает с уровнем стойкости~$l$. 
 
-В других алгоритмах могут выгружаться имитовставки сколь угодно большой длины
-или даже последовательности имитовставок. Имитовставки могут интерпретироваться 
-как псевдослучайные числа (биты), а автомат~--- как их генератор.
+В других алгоритмах могут \addendum{вычисляться} имитовставки сколь угодно 
+большой длины или даже последовательности имитовставок. Имитовставки могут 
+интерпретироваться как псевдослучайные числа (биты), а автомат~--- как их 
+генератор. 
 
 Псевдослучайные числа являются материалом для создания синхропосылок,
 ключей, других криптографических объектов. 
@@ -290,8 +290,8 @@ $q^2\cdot 2^l\leq 2^{m+1}$.
 стойкости~$l$. 
 %
 Алгоритм, полученный из основного определенной настройкой параметров,
-считается самостоятельным алгоритмом. Так самостоятельным является алгоритм 
-$\algname{bash-hash}[l]$. 
+считается самостоятельным алгоритмом. Так\addendum{,} самостоятельным является 
+алгоритм $\algname{bash-hash}[l]$. 
 %
 В интерфейсе объявляется, что его входными данными является хэшируемое 
 слово~$X\in\{0,1\}^*$, выходными~--- хэш-значение~$Y\in\{0,1\}^{2l}$.
@@ -303,7 +303,7 @@ $\algname{bash-hash}[l]$.
 записывается как~$Y\leftarrow\algname{bash-hash}[l](X)$.
 
 Алгоритм может вызываться в других алгоритмах настоящего стандарта или 
-в алгоритмах других стандартов. И наоборот алгоритм может вызывать другие 
+в алгоритмах других стандартов. И наоборот\addendum{,} алгоритм может вызывать другие 
 алгоритмы. В последнем случае интерфейс содержит перечень задействованных 
 алгоритмов.
 
