--- a/spec/081Auto.tex
+++ b/spec/081Auto.tex
@@ -42,7 +42,7 @@ $000100$\\
 \end{tabular}
 \end{table}
 
-Поддерживаются следующие команды:
+\addendum{Перечень допустимых команд автомата}:
 \begin{itemize}
 \item
 \algname{start} (инициализировать);
