--- a/spec/093AE.tex
+++ b/spec/093AE.tex
@@ -61,8 +61,14 @@ $T\leftarrow \alpha.\algname{squeeze}(l)$;
 
 \begin{note}
 Примечание~1~--- 
-Если $I=\perp$, то шаг~2.1 может быть опущен.
-Если $X=\perp$, то может быть опущен шаг~2.2.
+Если $I=\perp$, то шаг~2.1 может быть \addendum{пропущен}.
+%
+Если $X=\perp$, то шаг~2.2 \addendum{может быть упрощен: $Y\leftarrow\perp$}.
+%
+\addendum{
+Пропуск и (или) упрощение шагов должны зеркально повторяться в алгоритме снятия 
+защиты (см. Примечание 5).
+}
 \end{note}
 
 \begin{note}
@@ -77,9 +83,10 @@ $T\leftarrow \alpha.\algname{squeeze}(l)$;
 \end{note}
 
 \begin{note}
-Примечание~4~--- Вызов $\alpha.\algname{ratchet}(\perp)$
-после обработки~$(X,I)$ не позволяет определить~$X$ по~$(Y,I)$,
-даже если состояние автомата раскрыто. 
+Примечание~4~--- 
+\addendum{После обработки~$(X,I)$ можно вызвать 
+команду~$\alpha.\algname{ratchet}(\perp)$. Вызов блокирует 
+определение~$X$ по~$(Y,I)$ даже после раскрытия состояния автомата.} 
 \end{note}
 
 \subsection{Алгоритм снятия защиты}\label{PRG.AE.Unwrap}
