--- a/spec/92ASN.tex
+++ b/spec/92ASN.tex
@@ -7,16 +7,16 @@
 \begin{center}
 \begin{tabular}{p{3.6cm}p{12.7cm}}
 \texttt{bashNNN} &
-алгоритм хэширования $\algname{bash-hash}[l]$;\\
+\addendum{А}лгоритм хэширования $\algname{bash-hash}[l]$;\\
 %
 \texttt{bash-prg-hashNNND} &
-алгоритм хэширования $\algname{bash-prg-hash}[l,d]$;\\
+\addendum{А}лгоритм хэширования $\algname{bash-prg-hash}[l,d]$;\\
 %
 \texttt{bash-prg-aeLLLD} &
-алгоритм аутентифицированного шифрования $\algname{bash-prg-ae}[l,d]$;\\
+\addendum{А}лгоритм аутентифицированного шифрования $\algname{bash-prg-ae}[l,d]$;\\
 %
 \texttt{bash-f}  &
-алгоритм вычисления значений sponge-функции (пункт~\ref{F}).\\
+\addendum{А}лгоритм вычисления значений sponge-функции (пункт~\ref{F}).\\
 \end{tabular}
 \end{center}
 
@@ -35,11 +35,11 @@
 \begin{center}
 \begin{tabular}{p{4.4cm}p{11.6cm}}
 \texttt{bign-with-bashNNN} &
-алгоритмы ЭЦП СТБ 34.101.45 (пункт 7.1)
+\addendum{А}лгоритмы ЭЦП СТБ 34.101.45 (пункт 7.1)
 c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$;\\
 %
 \texttt{bign-ibs-with-bashNNN} &
-алгоритмы идентификационной ЭЦП СТБ 34.101.45
+\addendum{А}лгоритмы идентификационной ЭЦП СТБ 34.101.45
 c функцией хэширования, заданной алгоритмом~$\algname{bash-hash}[2l]$.\\
 \end{tabular}
 \end{center}
