--- a/spec/02Refs.tex
+++ b/spec/02Refs.tex
@@ -19,9 +19,9 @@
 Примечание~---~При пользовании настоящим стандартом целесообразно проверить
 действие ТНПА по каталогу, составленному по состоянию на 1 января текущего года,
 и по соответствующим информационным указателям, опубликованным в текущем году.
-%
+
 Если ссылочные ТНПА заменены (изменены), то при пользовании настоящим стандартом
-следует руководствоваться замененными (измененными) ТНПА. Если ссылочные ТНПА
+следует руководствоваться \addendum{действующими взамен ТНПА}. Если ссылочные ТНПА
 отменены без замены, то положение, в котором дана ссылка на них, применяется в
 части, не затрагивающей эту ссылку.
 \end{note}
