--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -129,10 +129,12 @@ C ростом~$l$ повышается стойкость алгоритмов 
 \section{Емкость}\label{COMMON.Capacity}
 
 В программируемых алгоритмах уровень стойкости $l$ сопровождается емкостью 
-$d\in\{1,2\}$. Емкость определяет объем внутренней памяти автомата 
-программируемого алгоритма. 
+$d\in\{1,2\}$\addendum{. 
 %
-С увеличением емкости повышаются гарантии безопасности, 
+% Емкость определяет объем внутренней памяти автомата программируемого 
+% алгоритма. 
+%
+С} увеличением емкости повышаются гарантии безопасности, 
 но снижается производительность. 
 %
 Выбор~$(l,d)=(256,2)$ обеспечивает максимальные гарантии.
@@ -185,8 +187,8 @@ $d\in\{1,2\}$. Емкость определяет объем внутренне
 построению второго прообраза (найти другое сообщение с тем же хэш-значением)
 и построению коллизии (найти различные сообщения с одинаковыми хэш-значениями).
 %
-Величина~$u$ в таблице означает, что для достижения успеха в ходе атаки 
-потребуется выполнить порядка~$2^u$ операций.
+\doubt{Атака имеет трудоемкость~$u$, если для ее осуществления требуется} 
+выполнить порядка~$2^u$ операций.
 
 \section{Ключ}\label{COMMON.Key}
 
@@ -276,7 +278,8 @@ $q^2\cdot 2^l\leq 2^{m+1}$.
 Синхропосылка необязательна, если шифрование не 
 предполагается, а речь идет только об имитозащите.
 
-При генерации секретных псевдослучайных чисел действуют те же требования к 
+При генерации псевдослучайных чисел, \addendum{предназначенных для построения 
+ключей и других секретных объектов}, действуют те же требования к 
 синхропосылкам, что и при шифровании.
 
 \section{Интерфейсы}\label{COMMON.IFace}
