--- a/spec/01Logo.tex
+++ b/spec/01Logo.tex
@@ -35,14 +35,12 @@ Sponge-based cryptographic algorithms
 
 \chapter{Область применения}
 
-Настоящий стандарт устанавливает криптографические алгоритмы хэширования
-и аутентифицированного шифрования, предназначенные для контроля 
-целостности и подлинности, обеспечения конфиденциальности и других способов 
-защиты информации при ее хранении, передаче и обработке. 
-%
-Алгоритмы настоящего стандарта построены на основе криптографической 
-sponge-функции, которая задает сложное преобразование двоичных слов большой 
-длины.
+Настоящий стандарт устанавливает криптографические алгоритмы \addendum{на основе
+sponge-функции~--- криптографической функции, которая задает сложное 
+преобразование двоичных слов большой длины. Устанавливаемые алгоритмы 
+предназначены} для контроля целостности и подлинности, обеспечения 
+конфиденциальности и других способов защиты информации при ее хранении, 
+передаче и обработке.
 
 Настоящий стандарт применяется при разработке 
 средств криптографической защиты информации.
