--- a/spec/04Defs.tex
+++ b/spec/04Defs.tex
@@ -101,7 +101,7 @@ $u\vee v$             &&
 %
 $\btoi{u}$           &&
 а)~для октета~$u\in\{0,1\}^8$
-число $2^7 u[0]+2^6 u[1]+\ldots+u[7]$ и\\[2pt]
+число $2^7 u[0]+2^6 u[1]+\ldots+u[7]$\addendum{,}\\[2pt]
 %
                         &&
 б)~для~$u=u_0\parallel u_1\parallel\ldots\parallel u_{n-1}$, 
