--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -187,8 +187,9 @@ $d\in\{1,2\}$\addendum{.
 построению второго прообраза (найти другое сообщение с тем же хэш-значением)
 и построению коллизии (найти различные сообщения с одинаковыми хэш-значениями).
 %
-\doubt{Атака имеет трудоемкость~$u$, если для ее осуществления требуется} 
-выполнить порядка~$2^u$ операций.
+\addendum{Трудоемкость представлена в таблице в логарифмической форме:
+для осуществления атаки трудоемкости~$u$ требуется выполнить порядка~$2^u$ 
+операций}.
 
 \section{Ключ}\label{COMMON.Key}
 
