--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -206,8 +206,8 @@ $d\in\{1,2\}$\addendum{.
 
 Сразу после \addendum{загрузки} ключа автомат программируемого алгоритма 
 переходит в ключевой режим. В этом режиме автомат может выполнять шифрование, 
-аутентифицированное шифрование, имитозащиту, генерировать секретные 
-псевдослучайные числа.
+аутентифицированное шифрование, имитозащиту, генерировать 
+\addendum{псевдослучайные числа для создания секретных объектов}.
 
 Пока ключ не введен, автомат остается в бесключевом режиме. Здесь можно только 
 хэшировать данные. 
